:add fatchUser function, new path and update swagger yaml
