# src/routes/users-routes.js
@@ -2,6 +2,7 @@ import express from "express";
 import {
   addUser,
   bookmarkMovie,
+  fetchUser,
   getAllUsers,
   login,
   verifyEmail,
@@ -15,6 +16,7 @@ usersRouter.post("/register", saveUser, addUser);
 usersRouter.get("/users/verify-email/:id/:token", verifyEmail);
 usersRouter.post("/login", login);
 usersRouter.post("/bookmarks", checkToken, bookmarkMovie);
+usersRouter.get("/users/me", fetchUser);
 
 // usersRouter.delete("/users/empty", emptyTable);
 
